--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -26,6 +26,9 @@ RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-r
     libwebp-dev \
  && rm -rf /var/lib/apt/lists/*
 
+# upgrade pip
+RUN pip install --upgrade pip
+
 # Install the application server.
 RUN pip install "gunicorn==20.0.4"
 
