--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
-version: '3.8'
+version: "3"
 
 services:
   web:
     build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn thilos_website.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - ./app/:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
       - ./.env.prod
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env.prod.db
+
+volumes:
+  postgres_data:
