--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -55,7 +55,7 @@ COPY --chown=wagtail:wagtail . .
 USER wagtail
 
 # Collect static files.
-RUN python manage.py collectstatic --noinput --clear
-RUN python manage.py compress --force
+# RUN python manage.py collectstatic --noinput --clear
+# RUN python manage.py compress --force
 
 ENTRYPOINT ["/app/entrypoint.sh"]
