--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,28 @@ services:
   web:
     build: ./app
     command: gunicorn thilos_website.wsgi:application --bind 0.0.0.0:8000
-    volumes:
-      - ./app/:/usr/src/app/
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     env_file:
-      - ./.env.prod
+     - ./.env.prod
+    networks:
+      - service_connector
+    depends_on:
+      - db
 
   db:
-    image: postgres:13.0-alpine
+    image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.prod.db
+    networks:
+      - service_connector
 
 volumes:
   postgres_data:
+
+networks:
+  service_connector:
+    external:
+      name: service_connector
