--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     command: gunicorn thilos_website.wsgi:application --bind 0.0.0.0:8000
     expose:
       - 8000
+    volumes:
+      - /home/thilo/docker/thilos_server/volumes/wagtail/static:/app/static
+      - /home/thilo/docker/thilos_server/volumes/wagtail/media:/app/media
     env_file:
      - ./.env.prod
     networks:
