--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - /home/thilo/docker/thilos_server/volumes/wagtail/static:/app/static
       - /home/thilo/docker/thilos_server/volumes/wagtail/media:/app/media
+      - ./backups:/app/backups
     env_file:
      - ./.env.prod
     networks:
@@ -17,7 +18,7 @@ services:
       - db
 
   db:
-    image: postgres:latest
+    image: postgres:11
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
