--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,11 @@
-Django>=3.1,<3.2
+Django>=3.0,<3.1
 wagtail>=2.14,<2.15
 django-libsass>=0.7
 django_compressor>=2.2
-django-debug-toolbar
 psycopg2-binary==2.9.1
 gunicorn==20.0.4
+# requirements for puput
+wheel
+django-colorful 
+django-el-pagination 
+django-social-share
